<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000921"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_background_desc"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/castlefirst" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="413dp"
        android:layout_height="56dp"
        android:contentDescription="@string/ad_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ad" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/quietscaryfont"
        android:rotation="-4"
        android:shadowColor="@color/dark_blue"
        android:shadowDx="-15"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/escape"
        android:textAllCaps="true"
        android:textColor="@color/light_grey"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:alpha="0.85"
        android:background="@drawable/rectangle_rounded_corners_shape"
        android:orientation="vertical"
        android:paddingLeft="65dp"
        android:paddingTop="25dp"
        android:paddingRight="65dp"
        android:paddingBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/champagne"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="55sp" />

        <Button
            android:id="@+id/btn_play_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/champagne"
            android:text="@string/play"
            android:textColor="@color/dark_blue"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_settings_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/champagne"
            android:text="@string/settings"
            android:textColor="@color/dark_blue"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_morelevels_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent_yellow"
            android:fontFamily="@font/champagne"
            android:text="@string/more_levels"
            android:textColor="@color/dark_blue"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>